feat: Adicionando banco de dados e rotas de get
